--- a/extension/src/test/resources/keycloak-default.properties
+++ b/extension/src/test/resources/keycloak-default.properties
@@ -1,3 +1,3 @@
-keycloak.url=https://localhost:8443/auth
+keycloak.url=http://localhost:8080/auth
 keycloak.admin.user=keycloak
 keycloak.admin.password=keycloak1!
