--- a/examples/sso-kubernetes/src/main/resources/application.yaml
+++ b/examples/sso-kubernetes/src/main/resources/application.yaml
@@ -30,15 +30,15 @@ management:
 # Externalized Keycloak configuration
 keycloak:
   # SSO Authentication requests. Send by application as redirect to the browser
-  url.auth: ${KEYCLOAK_URL_AUTH:http://localhost:9000/auth}
+  url.auth: ${KEYCLOAK_URL_AUTH:http://localhost:9001}
   # SSO Token requests. Send from the application to Keycloak
-  url.token: ${KEYCLOAK_URL_TOKEN:http://localhost:9000/auth}
+  url.token: ${KEYCLOAK_URL_TOKEN:http://localhost:9001}
   # Keycloak access for the Identity Provider plugin.
-  url.plugin: ${KEYCLOAK_URL_PLUGIN:http://localhost:9000/auth}
+  url.plugin: ${KEYCLOAK_URL_PLUGIN:http://localhost:9001}
 
   # Keycloak Camunda Identity Client
-  client.id: ${KEYCLOAK_CLIENT_ID:camunda-identity-service}
-  client.secret: ${KEYCLOAK_CLIENT_SECRET:GBLb9KSRxmmo81SIGH2BWu3GEtrofvWo}
+  client.id: ${KEYCLOAK_CLIENT_ID:process-services-client}
+  client.secret: ${KEYCLOAK_CLIENT_SECRET:kAQTT0A7e7aneg5lnuBXX9F49LhBFlLR}
 
 # Spring Boot Security OAuth2 SSO
 spring.security:
@@ -54,11 +54,11 @@ spring.security:
           scope: openid, profile, email
       provider:
         keycloak:
-          issuer-uri: ${keycloak.url.auth}/realms/camunda
-          authorization-uri: ${keycloak.url.auth}/realms/camunda/protocol/openid-connect/auth
-          user-info-uri: ${keycloak.url.auth}/realms/camunda/protocol/openid-connect/userinfo
-          token-uri: ${keycloak.url.token}/realms/camunda/protocol/openid-connect/token
-          jwk-set-uri: ${keycloak.url.token}/realms/camunda/protocol/openid-connect/certs
+          issuer-uri: ${keycloak.url.auth}/realms/shield
+          authorization-uri: ${keycloak.url.auth}/realms/shield/protocol/openid-connect/auth
+          user-info-uri: ${keycloak.url.auth}/realms/shield/protocol/openid-connect/userinfo
+          token-uri: ${keycloak.url.token}/realms/shield/protocol/openid-connect/token
+          jwk-set-uri: ${keycloak.url.token}/realms/shield/protocol/openid-connect/certs
           # set user-name-attribute one of: 
           # - sub                -> default; using keycloak ID as camunda user ID
           # - email              -> useEmailAsCamundaUserId=true
@@ -75,8 +75,8 @@ rest.security:
 
 # Camunda Keycloak Identity Provider Plugin
 plugin.identity.keycloak:
-  keycloakIssuerUrl: ${keycloak.url.plugin}/realms/camunda
-  keycloakAdminUrl: ${keycloak.url.plugin}/admin/realms/camunda
+  keycloakIssuerUrl: ${keycloak.url.plugin}/realms/shield
+  keycloakAdminUrl: ${keycloak.url.plugin}/admin/realms/shield
   clientId: ${keycloak.client.id}
   clientSecret: ${keycloak.client.secret}
   useEmailAsCamundaUserId: false
@@ -85,3 +85,4 @@ plugin.identity.keycloak:
   enforceSubgroupsInGroupQuery: true
   administratorGroupName: camunda-admin
   disableSSLCertificateValidation: true
+  referentialManagerUrl: ${REFERENTIAL_MANAGER_URL:http://localhost:8080/api/v1/referential-manager}
