--- a/examples/jwt/src/main/resources/application.yaml
+++ b/examples/jwt/src/main/resources/application.yaml
@@ -69,5 +69,6 @@ plugin.identity.keycloak:
   useGroupPathAsCamundaGroupId: true
   administratorGroupName: camunda-admin
   disableSSLCertificateValidation: true
+  referentialManagerUrl: ${REFERENTIAL_MANAGER_URL:http://localhost:8080/api/v1/referential-manager}
 
 logging.level.org.springframework.security: TRACE
