--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
     <version>1.4.4</version>
   </parent>
 
-  <groupId>org.camunda.bpm.extension</groupId>
+<!--  <groupId>org.camunda.bpm.extension</groupId>-->
+  <groupId>com.openmairie.extension</groupId>
   <artifactId>camunda-platform-7-keycloak-root</artifactId>
-  <version>7.22.0</version>
+  <version>v7.22.0</version>
   <packaging>pom</packaging>
   <name>Camunda Platform 7 - engine plugins - identity - keycloak - root</name>
   <description>A Camunda 7 Identity Provider Plugin for Keycloak</description>
@@ -48,7 +49,7 @@
   </scm>
 
   <!-- repositories used for distribution of releases and snapshots, DO NOT CHANGE -->
-  <distributionManagement>
+<!--  <distributionManagement>
     <repository>
       <id>camunda-nexus</id>
       <name>camunda bpm community extensions</name>
@@ -58,9 +59,17 @@
       <id>camunda-nexus</id>
       <name>camunda bpm community extensions snapshots</name>
       <url>https://artifacts.camunda.com/artifactory/camunda-bpm-community-extensions-snapshots/</url>
-      <!-- for maven 2 compatibility -->
+      &lt;!&ndash; for maven 2 compatibility &ndash;&gt;
       <uniqueVersion>true</uniqueVersion>
     </snapshotRepository>
+  </distributionManagement>-->
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>openmairie</name>
+      <url>https://maven.pkg.github.com/mairie-golfe-3/camunda-platform-7-keycloak</url>
+    </repository>
   </distributionManagement>
 
   <modules>
@@ -146,6 +155,12 @@
           </additionalDependencies>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
     </plugins>
 
     <pluginManagement>
@@ -155,6 +170,7 @@
           <artifactId>nexus-staging-maven-plugin</artifactId>
           <version>1.7.0</version>
         </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
